Save ID-Properties for WorkSpaces #73446

Closed
opened 2020-01-28 03:04:18 +01:00 by michal.wallace@gmail.com · 11 comments

System Information
Operating system: windows 10
Graphics card: nvidia geforce

Blender Version
Broken: v 2.81a

Short description of error

The python API docs claim that custom properties will be saved with the blend file, but this does not appear to be the case for custom properties defined on workspace objects.

https://docs.blender.org/api/blender_python_api_current/info_quickstart.html#custom-properties

Exact steps for others to reproduce the error

from default startup (new general file),
open the active tool and workspace settings panel (screwdriver and wrench icon)
open the workspaces sub-panel
add any custom property
save the file
close and re-open it.
(the custom property won't be there)

**System Information** Operating system: windows 10 Graphics card: nvidia geforce **Blender Version** Broken: v 2.81a **Short description of error** The python API docs claim that custom properties will be saved with the blend file, but this does not appear to be the case for custom properties defined on workspace objects. https://docs.blender.org/api/blender_python_api_current/info_quickstart.html#custom-properties **Exact steps for others to reproduce the error** from default startup (new general file), open the active tool and workspace settings panel (screwdriver and wrench icon) open the workspaces sub-panel add any custom property save the file close and re-open it. (the custom property won't be there)

Added subscriber: @tangentstorm

Added subscriber: @tangentstorm

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen

@KaiJaegersen mentioned on https://devtalk.blender.org/t/scene-per-tab-event-handler-for-tab-switching/11517/6 that workspace and window settings are runtime-only... If that's the case, then I suppose this is a documentation bug... But if that's the case, why even expose a UI for workspace custom properties?

@KaiJaegersen mentioned on https://devtalk.blender.org/t/scene-per-tab-event-handler-for-tab-switching/11517/6 that workspace and window settings are runtime-only... If that's the case, then I suppose this is a documentation bug... But if that's the case, why even expose a UI for workspace custom properties?
Member

Added subscribers: @JulianEisel, @JacquesLucke

Added subscribers: @JulianEisel, @JacquesLucke
Member

I'm not sure how workspaces are implemented exactly. @JulianEisel might know more about workspaces are stored.

I'm not sure how workspaces are implemented exactly. @JulianEisel might know more about workspaces are stored.
Campbell Barton changed title from workspace custom properties are not saved to Save ID-Properties for WorkSpaces 2020-01-28 10:56:09 +01:00

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42

As far as I can see this can be supported, as with other windowing data, undo doesn't track this so STRUCT_NO_DATABLOCK_IDPROPERTIES would need to be set.

As long as there aren't any complications think this is OK to add.
Pinging @mont29 for a second opinion.

As far as I can see this can be supported, as with other windowing data, undo doesn't track this so `STRUCT_NO_DATABLOCK_IDPROPERTIES` would need to be set. As long as there aren't any complications think this is OK to add. Pinging @mont29 for a second opinion.

Am not sure why STRUCT_NO_DATABLOCK_IDPROPERTIES should be used? AFAIK this is used to actually forbid custom props on a structure that does have idprops storage? Screen ID does not have that at least…

In fact am not sure why customprops on WS are not saved, afaict only WM are explicitly excluded from that in write_iddata(). Screens and WorkSpaces should be written as any other ID (although indeed there would be no undo supported for those two).

Am not sure why `STRUCT_NO_DATABLOCK_IDPROPERTIES` should be used? AFAIK this is used to actually forbid custom props on a structure that does have idprops storage? `Screen` ID does not have that at least… In fact am not sure why customprops on WS are not saved, afaict only WM are explicitly excluded from that in `write_iddata()`. Screens and WorkSpaces should be written as any other ID (although indeed there would be no undo supported for those two).
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy

This issue was referenced by cc6defa244

This issue was referenced by cc6defa24456783c90cd4fea65111ff95aaec666

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-12 08:20:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73446
No description provided.