Fix T73446: WorkSpace ID properties not saved